# frozenintset

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: python-publish.yml
src/frozenintset/: __init__.py  _impl.py
test/: test_frozenintset.py
