[project]
name = "frozenintset"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julian Bertram", email = "tirednesscankill@warhog.net" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "twine>=6.1.0",
]
