[project]
name = "frozenintset"
version = "0.1.3"
description = "An immutable, memory-efficient set of integers."
readme = "README.md"
authors = [
    { name = "Julian Bertram", email = "tirednesscankill@warhog.net" }
]
requires-python = ">=3.11"
dependencies = []
license = { text = "MIT" }
keywords = ["set", "immutable", "range", "integers", "compressed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]

[project.urls]
Source = "https://github.com/scravy/frozenintset"
Tracker = "https://github.com/scravy/frozenintset/issues"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "mypy>=1.15.0",
    "nox>=2025.5.1",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "twine>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
